MMA-7724 Bruk Tema.name(), ikke Tema.getTemanavn(). Dedupliser tilgangsbruker ident mapping. Litt rydding