@@ -3,6 +3,7 @@ package no.nav.saf.endpoints.dokumentoversikt;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import no.nav.saf.domain.visningsmodell.BrukerTilgangAvvistBegrunnelse;
 import no.nav.saf.domain.visningsmodell.Dokumentoversikt;
+import no.nav.saf.domain.visningsmodell.Journalpost;
 import no.nav.saf.endpoints.AbstractItest;
 import no.nav.saf.endpoints.graphql.GraphQLRequest;
 import org.junit.jupiter.api.BeforeEach;
@@ -80,12 +81,7 @@ class DokumentoversiktFagsakIT extends AbstractItest {
 		assertEquals(KANAL_REFERANSE_ID, dokumentoversikt.getJournalposter().get(0).getEksternReferanseId());
 		assertEquals(KANAL_REFERANSE_ID, dokumentoversikt.getJournalposter().get(1).getEksternReferanseId());
 		assertEquals(KANAL_REFERANSE_ID, dokumentoversikt.getJournalposter().get(2).getEksternReferanseId());
-		assertTrue(dokumentoversikt.getJournalposter().get(0).isBrukerHarTilgang());
-		assertTrue(dokumentoversikt.getJournalposter().get(1).isBrukerHarTilgang());
-		assertTrue(dokumentoversikt.getJournalposter().get(2).isBrukerHarTilgang());
-		assertThat(dokumentoversikt.getJournalposter().get(0).getBrukerTilgangAvvistBegrunnelser()).isEmpty();
-		assertThat(dokumentoversikt.getJournalposter().get(1).getBrukerTilgangAvvistBegrunnelser()).isEmpty();
-		assertThat(dokumentoversikt.getJournalposter().get(2).getBrukerTilgangAvvistBegrunnelser()).isEmpty();
+		assertBrukerTilgang(dokumentoversikt.getJournalposter().toArray(Journalpost[]::new));
 
 		verify(postRequestedFor(urlEqualTo("/hentjournalsakinfo/finnjournalposter")).withRequestBody(matchingJsonPath("$.gsakSakIds", containing("119185782"))));
 	}
@@ -118,9 +114,7 @@ class DokumentoversiktFagsakIT extends AbstractItest {
 		assertEquals(KANAL_REFERANSE_ID, dokumentoversikt.getJournalposter().get(0).getEksternReferanseId());
 		assertEquals(KANAL_REFERANSE_ID, dokumentoversikt.getJournalposter().get(1).getEksternReferanseId());
 		assertEquals(KANAL_REFERANSE_ID, dokumentoversikt.getJournalposter().get(2).getEksternReferanseId());
-		assertThat(dokumentoversikt.getJournalposter().get(0).getBrukerTilgangAvvistBegrunnelser()).isEmpty();
-		assertThat(dokumentoversikt.getJournalposter().get(1).getBrukerTilgangAvvistBegrunnelser()).isEmpty();
-		assertThat(dokumentoversikt.getJournalposter().get(2).getBrukerTilgangAvvistBegrunnelser()).isEmpty();
+		assertBrukerTilgang(dokumentoversikt.getJournalposter().toArray(Journalpost[]::new));
 	}
 
 	@Test
@@ -155,9 +149,7 @@ class DokumentoversiktFagsakIT extends AbstractItest {
 		assertEquals(KANAL_REFERANSE_ID, dokumentoversikt.getJournalposter().get(0).getEksternReferanseId());
 		assertEquals(KANAL_REFERANSE_ID, dokumentoversikt.getJournalposter().get(1).getEksternReferanseId());
 		assertEquals(KANAL_REFERANSE_ID, dokumentoversikt.getJournalposter().get(2).getEksternReferanseId());
-		assertThat(dokumentoversikt.getJournalposter().get(0).getBrukerTilgangAvvistBegrunnelser()).isEmpty();
-		assertThat(dokumentoversikt.getJournalposter().get(1).getBrukerTilgangAvvistBegrunnelser()).isEmpty();
-		assertThat(dokumentoversikt.getJournalposter().get(2).getBrukerTilgangAvvistBegrunnelser()).isEmpty();
+		assertBrukerTilgang(dokumentoversikt.getJournalposter().toArray(Journalpost[]::new));
 
 		verify(postRequestedFor(urlEqualTo("/hentjournalsakinfo/finnjournalposter")).withRequestBody(matchingJsonPath("$.psakSakIds", containing("21998969"))));
 	}
@@ -181,7 +173,8 @@ class DokumentoversiktFagsakIT extends AbstractItest {
 		assertEquals(OK, responseEntity.getStatusCode());
 		assertEquals("429837417", dokumentoversikt.getJournalposter().get(0).getJournalpostId());
 		assertEquals(KANAL_REFERANSE_ID, dokumentoversikt.getJournalposter().get(0).getEksternReferanseId());
-		assertThat(dokumentoversikt.getJournalposter().get(0).getBrukerTilgangAvvistBegrunnelser()).containsExactly(new BrukerTilgangAvvistBegrunnelse("annen_part", null));
+		assertFalse(dokumentoversikt.getJournalposter().getFirst().isBrukerHarTilgang());
+		assertThat(dokumentoversikt.getJournalposter().getFirst().getBrukerTilgangAvvistBegrunnelser()).containsExactly(new BrukerTilgangAvvistBegrunnelse("annen_part", null));
 	}
 
 	@Test
@@ -331,9 +324,7 @@ class DokumentoversiktFagsakIT extends AbstractItest {
 		Dokumentoversikt dokumentoversikt = getDokumentoversikt(responseEntity);
 
 		assertEquals(4, dokumentoversikt.getJournalposter().size());
-		assertThat(dokumentoversikt.getJournalposter().get(0).getBrukerTilgangAvvistBegrunnelser()).isEmpty();
-		assertThat(dokumentoversikt.getJournalposter().get(1).getBrukerTilgangAvvistBegrunnelser()).isEmpty();
-		assertThat(dokumentoversikt.getJournalposter().get(2).getBrukerTilgangAvvistBegrunnelser()).isEmpty();
+		assertBrukerTilgang(dokumentoversikt.getJournalposter().toArray(Journalpost[]::new));
 		assertNull(dokumentoversikt.getSideInfo());
 		verifyabacDenyPep1gAndHttpStatusCode(OK, responseEntity.getStatusCode());
 	}
@@ -492,7 +483,8 @@ class DokumentoversiktFagsakIT extends AbstractItest {
 
 		assertEquals("429837417", dokumentoversikt.getJournalposter().get(0).getJournalpostId());
 		assertThat(dokumentoversikt.getJournalposter()).hasSize(1);
-		assertThat(dokumentoversikt.getJournalposter().getFirst().getBrukerTilgangAvvistBegrunnelser()).containsExactly(new BrukerTilgangAvvistBegrunnelse("gdpr", null));
+		assertFalse(dokumentoversikt.getJournalposter().get(0).isBrukerHarTilgang());
+		assertThat(dokumentoversikt.getJournalposter().getFirst().getBrukerTilgangAvvistBegrunnelser()).containsExactly(new BrukerTilgangAvvistBegrunnelse("temaer_unntatt_innsyn", null), new BrukerTilgangAvvistBegrunnelse("gdpr", null));
 		assertSaksbehandlerHarIkkeTilgang(dokumentoversikt);
 		verify(postRequestedFor(urlEqualTo("/hentjournalsakinfo/finnjournalposter"))
 				.withRequestBody(containing("{\"gsakSakIds\":[\"135695442\"],\"psakSakIds\":[],\"fraDato\":\"0001-01-01\",\"tilDato\":null,\"inkluderJournalStatus\":[\"FL\",\"FS\",\"J\",\"E\"],\"inkluderJournalpostType\":[\"I\",\"U\",\"N\"],\"visFeilregistrerte\":false,\"alleIdenter\":[],\"foerste\":5,\"etterPeker\":null}")));
